2004-12-15  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/import_dialog.rb,
	  lib/alexandria/ui/export_dialog.rb,
	  lib/alexandria/library.rb:

	- Changed the Tellico archive file extention from 'bc' to 'tc' ;
	- In the export dialog, in case the user tries to use a library name
	  that is already used, grab the focus on the library name text field
	  after the alert message.

2004-12-14  Laurent Sansonetti  <lrz@gnome.org>

	* TODO:

	Removed points that have been implemented.

	* data/alexandria/glade/book_properties_dialog.glade,
	  lib/alexandria/book.rb,
	  lib/alexandria/ui/book_properties_dialog.rb,
	  lib/alexandria/ui/book_properties_dialog_base.rb,
	  lib/alexandria/ui/new_book_dialog_manual.rb:

	Introduced very basic loaning support (is the book borrowed?,
	who borrowed it? and when?).

2004-11-08  Dafydd Harries  <daf@muse.19inch.net>

	* post-install.rb:

	Don't do anything if ENV['GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL'] is
	set. This makes it easier to build the package without gconftool-2
	being installed.

2004-11-05  Dafydd Harries  <daf@muse.19inch.net>

	* pre-setup.rb:

	Raise an exception if msgfmt failed.

=== Alexandria 0.4.0 ===

2004-11-05  Laurent Sansonetti  <lrz@gnome.org>

	* NEWS,
	  README:

	Updated for 0.4.0.

	* lib/alexandria/library.rb:

	- Tellico Import: check for either 'bookcase.xml' or 'tellico.xml' 
	  as the XML file ;
	- Tellico Import: check for either 'bookcase' or 'tellico' as the
	  root element inside the XML ;
	- Tellico Import: check for either 2 or 5 as the collection type ;
	- ONIX and Tellico Export: rename the .cover extention either to
	  'jpg' or 'gif' according to the file type.
	- Tellico Export: remove the 'www' part of the namespace address. 

2004-11-02  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/library.rb:

	- Added an experimental Tellico importer ;
	- Refactored the #save_cover method.

	* lib/alexandria/ui/import_dialog.rb:

	- Fixed the parent reference of alert dialogs ;